--- a/IPSX/New Proxy/Storyboard/NewProxy.storyboard
+++ b/IPSX/New Proxy/Storyboard/NewProxy.storyboard
@@ -211,67 +211,82 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8ZI-Wg-5ps" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="101"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ZI-Wg-5ps" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Silver Pack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6Q-1b-hF1">
-                                                            <rect key="frame" x="15" y="12" width="84" height="20"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Silver Pack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6Q-1b-hF1">
+                                                            <rect key="frame" x="15" y="15" width="84" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.20000000298023224" translatesAutoresizingMaskIntoConstraints="NO" id="vx8-Zl-hae">
-                                                            <rect key="frame" x="15" y="40" width="344" height="2"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.20000000298023224" translatesAutoresizingMaskIntoConstraints="NO" id="vx8-Zl-hae">
+                                                            <rect key="frame" x="15" y="40" width="345" height="2"/>
                                                             <color key="progressTintColor" red="0.31764705879999999" green="0.8980392157" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <color key="trackTintColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </progressView>
-                                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.40000000596046448" translatesAutoresizingMaskIntoConstraints="NO" id="xgH-eS-fO2">
-                                                            <rect key="frame" x="15" y="44" width="344" height="2"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.40000000596046448" translatesAutoresizingMaskIntoConstraints="NO" id="xgH-eS-fO2">
+                                                            <rect key="frame" x="15" y="44" width="345" height="2"/>
                                                             <color key="progressTintColor" red="0.39607843139999999" green="0.39607843139999999" blue="0.39607843139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <color key="trackTintColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </progressView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="20 min" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vyz-Qa-9Cl">
-                                                            <rect key="frame" x="280" y="51" width="79" height="20"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 min" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vyz-Qa-9Cl">
+                                                            <rect key="frame" x="310" y="51" width="50" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nWX-wB-bTv" userLabel="Separator">
-                                                            <rect key="frame" x="0.0" y="76" width="375" height="1"/>
+                                                            <rect key="frame" x="0.0" y="75" width="375" height="1"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30105633799999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Expired" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIl-Db-czL">
-                                                            <rect key="frame" x="15" y="81" width="46" height="16"/>
+                                                            <rect key="frame" x="15" y="80" width="46" height="16"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="/20 MB" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GE8-hv-Y2B">
-                                                            <rect key="frame" x="312" y="18" width="47" height="14"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/20 MB" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GE8-hv-Y2B">
+                                                            <rect key="frame" x="322" y="21" width="38" height="14"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N2z-lO-kyE">
-                                                            <rect key="frame" x="300" y="14" width="17" height="20"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N2z-lO-kyE">
+                                                            <rect key="frame" x="305" y="17" width="17" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="vx8-Zl-hae" firstAttribute="top" secondItem="b6Q-1b-hF1" secondAttribute="bottom" constant="5" id="19P-rc-bMO"/>
+                                                        <constraint firstAttribute="trailing" secondItem="vx8-Zl-hae" secondAttribute="trailing" constant="15" id="2X7-av-b9Q"/>
+                                                        <constraint firstItem="Vyz-Qa-9Cl" firstAttribute="top" secondItem="xgH-eS-fO2" secondAttribute="bottom" constant="5" id="FE5-uo-qjE"/>
+                                                        <constraint firstItem="xgH-eS-fO2" firstAttribute="top" secondItem="vx8-Zl-hae" secondAttribute="bottom" constant="2" id="Q3W-9o-hXw"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Vyz-Qa-9Cl" secondAttribute="trailing" constant="15" id="Sd5-F8-GOq"/>
+                                                        <constraint firstItem="b6Q-1b-hF1" firstAttribute="leading" secondItem="8ZI-Wg-5ps" secondAttribute="leading" constant="15" id="aBZ-h6-fOW"/>
+                                                        <constraint firstAttribute="trailing" secondItem="xgH-eS-fO2" secondAttribute="trailing" constant="15" id="aFY-Ck-y0h"/>
+                                                        <constraint firstItem="b6Q-1b-hF1" firstAttribute="top" secondItem="8ZI-Wg-5ps" secondAttribute="top" constant="15" id="cpJ-mH-bAa"/>
+                                                        <constraint firstItem="GE8-hv-Y2B" firstAttribute="leading" secondItem="N2z-lO-kyE" secondAttribute="trailing" id="ejt-97-l99"/>
+                                                        <constraint firstItem="vx8-Zl-hae" firstAttribute="top" secondItem="GE8-hv-Y2B" secondAttribute="bottom" constant="5" id="fFg-id-Tmq"/>
+                                                        <constraint firstItem="N2z-lO-kyE" firstAttribute="bottom" secondItem="GE8-hv-Y2B" secondAttribute="bottom" constant="2" id="fV4-cf-I8E"/>
+                                                        <constraint firstItem="vx8-Zl-hae" firstAttribute="leading" secondItem="8ZI-Wg-5ps" secondAttribute="leading" constant="15" id="mYG-uI-XwA"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GE8-hv-Y2B" secondAttribute="trailing" constant="15" id="wEL-o5-4fb"/>
+                                                        <constraint firstItem="xgH-eS-fO2" firstAttribute="leading" secondItem="8ZI-Wg-5ps" secondAttribute="leading" constant="15" id="xpF-KS-PcT"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="8ZI-Wg-5ps" firstAttribute="top" secondItem="WRr-bs-kEZ" secondAttribute="top" id="CJx-QP-YWG"/>
+                                                <constraint firstItem="8ZI-Wg-5ps" firstAttribute="leading" secondItem="WRr-bs-kEZ" secondAttribute="leading" id="Uni-gl-Oge"/>
+                                                <constraint firstAttribute="bottom" secondItem="8ZI-Wg-5ps" secondAttribute="bottom" id="clb-Dp-CR3"/>
+                                                <constraint firstAttribute="trailing" secondItem="8ZI-Wg-5ps" secondAttribute="trailing" id="skB-rf-gbj"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
