--- a/IPSX/Storyboard/Search.storyboard
+++ b/IPSX/Storyboard/Search.storyboard
@@ -184,11 +184,22 @@
                         <outlet property="bottomConstraint" destination="IVY-YZ-q4h" id="Ay9-OQ-8gB"/>
                         <outlet property="closeButton" destination="Mfk-dz-DFx" id="Ew2-tV-R0v"/>
                         <outlet property="tableView" destination="WVZ-01-mjG" id="cct-vr-3LS"/>
+                        <segue destination="wdf-BT-Yzy" kind="show" identifier="NewProxyFlowSegueID" id="xCJ-lL-dTm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w56-cX-BWW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5572" y="-154.27286356821591"/>
+        </scene>
+        <!--NewProxy-->
+        <scene sceneID="PbU-to-1lq">
+            <objects>
+                <viewControllerPlaceholder storyboardName="NewProxy" id="wdf-BT-Yzy" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="rwf-CA-UKQ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gfD-Lg-hI3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6206" y="-155"/>
         </scene>
     </scenes>
     <resources>
